Desarrollo final y funcional, contenfull para imagenes de doctores, login data quemada

--- a/clinica_Imperial/Detalleproducto.html
+++ b/clinica_Imperial/Detalleproducto.html
@@ -5,10 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinica Imperial</title>
-    <link href="css/pruebas.css" rel="stylesheet" type="text/css">
+    <link href="css/globales.css" rel="stylesheet" type="text/css">
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
-    <!-- <link href="css/skeleton.css" rel="stylesheet" type="text/css">
-    <link href="css/custom.css" rel="stylesheet" type="text/css"> -->
+  
 </head>
 
 <body>
@@ -64,7 +63,7 @@
                  uis consequuntur?</p>
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ea, facilis et, dolores accusantium consectetur doloribus expedita temporibus earum autem iusto! Amet ad dolores sit libero pariatur cupiditate magni iure? Iste earum soluta quis. Velit quo excepturi illo incidunt ipsam, repellendus, eius optio molestiae atque et nisi. Odio, commodi exercitationem consequatur voluptatum fuga odit saepe unde. Dolorum maxime delectus assumenda earum tempore esse impedit neque dolore obcaecati. Distinctio sed alias eligendi assumenda temporibus tempora at perspiciatis non, laboriosam dignissimos, numquam quia ipsa dicta? Alias perferendis quis sequi. Doloribus reprehenderit odio eos error quidem impedit. Doloremque impedit eum iure unde sunt!</p>
            </div>
-           <a class="button detalle" href="index.html">Seguir comprando</a>    
+           <a class="button detalle" href="https://d1mwbki74xr6qh.cloudfront.net/index.html">Seguir comprando</a>    
 
         </div>
              
