--- a/clinica_Imperial/Login.html
+++ b/clinica_Imperial/Login.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://market-place-index.s3.amazonaws.com/css/style.css">
 
 
 </head>
@@ -21,7 +21,7 @@
       <h1 class="nombre-pagina">Login</h1>
       <p class="Descripcion-pagina">Inicia Sesion con tus credenciales</p>
 
-      <form name="form" id="formulario"class="formulario" action="productos.html">
+      <form name="form" id="formulario"class="formulario" action="https://d1yg1fd5s32hnd.cloudfront.net/index.html">
         <div class="campo">
           <label for="email">Email</label>
           <input type="email" placeholder="Ingresa tu Email" name="email" id="email">
@@ -34,7 +34,7 @@
       </form>
     </div>
   </div>
-  <script src="js/login.js"></script>
+  <script src="https://market-place-index.s3.amazonaws.com/js/login.js"></script>
 </body>
 
 </html>
