--- a/clinica_Imperial/carrito.html
+++ b/clinica_Imperial/carrito.html
@@ -4,40 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinica Imperial</title>
-    <link href="css/pruebas.css" rel="stylesheet" type="text/css">
-    <link href="css/normalize.css" rel="stylesheet" type="text/css">
-    <!-- <link href="css/skeleton.css" rel="stylesheet" type="text/css">
-    <link href="css/custom.css" rel="stylesheet" type="text/css"> -->
+    <link href="https://market-place-index.s3.amazonaws.com/css/globales.css" rel="stylesheet" type="text/css">
+    <link href="https://market-place-index.s3.amazonaws.com/css/normalize.css" rel="stylesheet" type="text/css">
+   
   </head>
   <body>
     <header>
       <div class="menu logo-nav">
-        <a href="index.html"><img src="img/fondoLogo.png" alt="" id="logo"></a>
+        <a href="index.html"><img src="https://market-place-index.s3.amazonaws.com/img/fondoLogo.png" alt="" id="logo"></a>
         <label class="menu-icon"><span class="fas fa-bars icomin"></span></label>
         <nav class="navigation">
-          <!-- <ul>
-           
-            <li class="car" >
-              <img src="img/cart.png" alt="">
-              </svg>
-                <div id="carrito" class="dropdown-menu">
-                  <table id="lista-carrito" class="table">
-                      <thead>
-                          <tr>
-                              <th>Imagen</th>
-                              <th>Nombre</th>
-                              <th>Precio</th>
-                              <th></th>
-                          </tr>
-                      </thead>
-                      <tbody></tbody>
-                  </table>
-
-                  <a href="#" id="vaciar-carrito" class="button-vaciar">Vaciar Carrito</a>
-                  <a href="#" id="procesar-pedido" class="button-pedido">Procesar Compra</a>
-              </div>
-            </li>
-          </ul> -->
+         
         </nav>
       </div>
     </header>
@@ -107,15 +84,12 @@
   </footer> 
 
 
-
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script  src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script  src="js/scripts.js"></script>
-    <script src="js/carrito.js"></script>
-    <script src="js/pedido.js"></script>
-    <script src="js/compra.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script  src="https://market-place-index.s3.amazonaws.com/js/scripts.js"></script>
+    <script src="https://market-place-index.s3.amazonaws.com/js/carrito.js"></script>
+    <script src="https://market-place-index.s3.amazonaws.com/js/pedido.js"></script>
+    <script src="https://market-place-index.s3.amazonaws.com/js/compra.js"></script>
 
 </body>
 </html>
